Oh yah almost done and nice touch with hthe things

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-      <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisc">
-      <meta name="keywords" content="Stele Business Solutions, Pholile Mhlanga, Stele">
+      <meta name="description" content="Stele Business Solutions is a multi-channeled organization supporting Enterprise Content Management, Business Solutions &amp; Business Development Services">
+      <meta name="keywords" content="Stele Business Solutions, Pholile Mhlanga, Stele, Enterprise Content Management,Business Solutions, Business Analysis, Business Development Services ">
+
+      <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+      <link rel="manifest" href="img/site.webmanifest">
+      <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+      <link rel="shortcut icon" href="img/favicon.ico">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="msapplication-config" content="img/browserconfig.xml">
+      <meta name="theme-color" content="#ffffff">
       
     </head>
 
@@ -49,7 +59,7 @@
           <div class="col s4" style="
     text-align: center;
 ">
-            <a class="brownText navLinks" href="#Services"  >Services</a>
+            <a class="brownText navLinks" href="#Services">Services</a>
           </div>
 
           <div class="col s4" style="
@@ -64,7 +74,13 @@
 
         <div>
           <p style="font-size: 2em;">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet nec erat ac condimentum. Nulla vel rutrum ligula. Sed hendrerit interdum orci a posuere. Vivamus ut velit aliquet, mollis.
+            Stele Business Solutions is a multi-channeled organization supporting Enterprise Content Management, Business Solutions &amp; Business Development services using various web applications and business process solutions.
+            <br><br>
+            The company is owned by a black female with a background in Information Technology and over 15 years in the IT industry; supported by highly skilled resources. 
+            <br><br>
+            We create practical business solutions to suit your business needs through continuous business process analysis and market shifts. 
+            <br><br>
+            Ubuntu is what brought us where we are, which makes it a natural value and ethos that guides our organisation. We provide opportunities for skills development to empower the youth from townships in creating their own futures.
           </p>
         </div>
 
@@ -82,8 +98,8 @@
         <br>
 
         <div>
-          <p style="font-size: 1.7em;">Web Application Development</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet nec erat ac condimentum. Nulla vel rutrum ligula. Sed hendrerit interdum orci a posuere. Vivamus ut velit aliquet, mollis. Ulla vel rutrum ligula. Sed hendrerit interdum orci a posuere</p>
+          <p style="font-size: 1.7em;">Application Development</p>
+          <p>We provide a full iterative SDLC service for web and mobile application development, from identifying client's user's requirements, analysis and design, execution, testing and publishing.</p>
           <a class="waves-effect waves-light btn brownBtn" href="mailto:info@stele.co.za?Subject=Web%20Application%20Development" >Enquire</a>
         </div>
 
@@ -91,7 +107,10 @@
 
         <div>
           <p style="font-size: 1.7em;">Business Development Services</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet nec erat ac condimentum. Nulla vel rutrum ligula. Sed hendrerit interdum orci a posuere. Vivamus ut velit aliquet, mollis. Ulla vel rutrum ligula. Sed hendrerit interdum orci a posuere</p>
+          <p>Our Business Incubator is designed to equip entrepreneurs in our program with technical skills for building digital solutions, business skilss, life skills for coping with the environment, assessment and guidance of fund usage through our dedicated mentorship programme.
+          <br><br>
+          Since we use a hands on approach, we can only accommodate a limited number of entrepreneurs at a time. Please enquire below if you would like to be admitted in our programme, one of our business development managers will contact you. 
+          </p>
           <a class="waves-effect waves-light btn brownBtn" href="mailto:info@stele.co.za?Subject=Business%20Development%20Services" >Enquire</a>
         </div>
 
@@ -99,23 +118,20 @@
 
 
         <div>
-          <p style="font-size: 1.7em;">Mobile Application Development</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet nec erat ac condimentum. Nulla vel rutrum ligula. Sed hendrerit interdum orci a posuere. Vivamus ut velit aliquet, mollis. Ulla vel rutrum ligula. Sed hendrerit interdum orci a posuere</p>
-          <a class="waves-effect waves-light btn brownBtn" href="mailto:info@stele.co.za?Subject=Mobile%20Application%20Development" >Enquire</a>
-        </div>
-
-         <br><br>
-
-        <div>
           <p style="font-size: 1.7em;">Software Project Consulting</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet nec erat ac condimentum. Nulla vel rutrum ligula. Sed hendrerit interdum orci a posuere. Vivamus ut velit aliquet, mollis. Ulla vel rutrum ligula. Sed hendrerit interdum orci a posuere</p>
+          <p>
+            We provide IT Professional Services to clients on once off or contract basis, at an hourly rate or project rate in the following disciplines:<br><br>
+            - Business Analysis <br>
+            - Software Development <br>
+            - Project Management <br>
+          </p>
           <a class="waves-effect waves-light btn brownBtn" href="mailto:info@stele.co.za?Subject=Software%20Project%20Consulting" >Enquire</a>
         </div>
 
         <br><br><br>
         
 
-        <br><br><br>
+        <br><br>
 
 
       </div><!-- container -->
